# soundcloud-rs

./: Cargo.toml  devbox.json
src/: main.rs
src/client/: album.rs  builder.rs  client.rs  playlists.rs  tracks.rs  users.rs
src/models/: client.rs  config.rs  error.rs  mod.rs
src/models/query/: users.rs
src/models/response/: mod.rs  playlists.rs  users.rs
tests/: client.rs
